--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Learn programming using julia"
+title: "Optimizing julia code"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
